--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
             </ul>
         </div>
     </nav>
-    <div class="background"> </div>
+
+    <div class="background"></div>
+
+    <main>
+        <div class="container">
+            <h1>Hello GitHub</h1>
+        </div>
+    </main>
     
 </body>
 </html>
